Pagination items alignment fix

--- a/src/templates/blog-list.module.scss
+++ b/src/templates/blog-list.module.scss
@@ -27,9 +27,12 @@
 }
 
 .pagination__action {
-  padding: 1rem;
+  display: flex;
   margin: 0 0.5rem;
   list-style: none;
   border: 1px solid #000;
   border-radius: 0.3rem;
+  padding: 1rem;
+  justify-content: center;
+  align-items: center;
 }
